# visgen

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: example.py
src/visgen/: __init__.py  audio.py  background.py  colors.py  main.py  overlay.py  renderer.py  utils.py  visualizer.py
src/visgen/bars/: __init__.py  base.py  builtin.py
src/visgen/effects/: __init__.py  base.py  builtin.py
src/visgen/plugins/: __init__.py  base.py  loader.py
