[project]
name = "visgen"
version = "0.2.2"
description = "Generate beautiful, customizable audio visualizer videos with Python."
readme = "README.md"
authors = [
    { name = "Ali Tavallaie", email = "a.tavallaie@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0",
    "opencv-python>=4.5.1.48",
    "pillow>=8.0.0",
    "cairosvg>=2.5.0",
]

[project.scripts]
visgen = "visgen:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
